<resources>
    <string name="app_name">英语学习</string>
    <string name="login_top">用户登录</string>
    <string name="login_account_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_choose_identify">管理员</string>
    <string name="login_button">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_delete">删除</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有更多数据</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="rb_class_notice">班级公告</string>
    <string name="rb_exam">练 习</string>
    <string name="rb_test">考 试</string>
    <string name="rb_mark">成绩查看</string>
    <string name="rb_personal_setting">个人设置</string>
    <string name="tv_notice_hint">请输入通知标题</string>
    <string name="tv_content_hint">请输入通知内容（500字以内）</string>
    <string name="btn_save">保存</string>
    <string name="tv_change_head">修改个人信息</string>
    <string name="btn_save_update">保存修改</string>
    <string name="btn_quit">退出登录</string>
    <string name="tv_link_email">联系邮箱</string>

    <string formatted="false" name="tts_toast_format">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="content1">  英语听力口语考试遵循有助于高等学校选拔人才，
        有助于中学推 进素质教育，有助于考试公平公正、科学、平稳、有效实施的原则，
        以《普通高等学校招生全国统一考试英语考试大纲》为依据，反映中华人民共和国教育部2003年4月第1版制订的
        《全日制普通高中英语课程标准》 （实验）对于听力技能培养的相关要求，并结合中学英语教学的实际，
        重视“新教材、 新情境”的创设与运用，考察学生的综合语言运用能力，尤其是注重考查考生在某一语境下获取和处理信息，
        用英语进行思维和表达的能力，以适应社会发展特别是我国改革开放和扩大对外交往的需要。英语听力口语考试坚持以科学性、
        准确性、客观性、公正性、规范性为前提，使试卷有较高的信度、效度， 必要的区分度和适当的难度，强调英语听力理解和口头表达的紧密联系，
        即听说合一，充分发挥考试对中学英语教育的积极导向作用。</string>
    <string name="content2">1．语言知识  要求考生掌握并能运用英语语音、词汇、语法基础知识以及所学功能意念和话题，
        考查考生在某一语境下获取和处理信息，用英语进行思维和表达的能力，要求掌握2500个单词及400左右常用短语。\n
        2. 语言运用  口语考试部分，主要考查考生的英语语音语调以及口头表达能力。考生应能：\n
        （1）根据指定话题，稍作准备后，用一定的句型和词汇，清楚、连贯、有条理地作简短的陈述或评论；\n
        （2）做到语音正确、语调自然，用恰当的语速和节奏表达自己的思想感情和意图；  英语听力口语考试为闭卷考试，\n
        ，采用计算机辅助考试的形式，在专用考场内进行，并全部在App系统中完成。听力部分共2小题。\n
        考试用时约 20分钟</string>
</resources>
